topic is_dirty - objectDiff

--- a/root/site/header.html
+++ b/root/site/header.html
@@ -62,6 +62,9 @@
     <link rel="stylesheet" href="/static/timeline/jquery.timeline.css">
     
     <!-- link rel="stylesheet" href="/static/timeline/clarive-timeline.css" / -->
+    
+    <!-- objectDiff -->
+    <script src="/static/objectDiff/objectDiff.js"></script>
 
     <!-- CodeMirror -->
     <link rel="stylesheet" href="/static/codemirror/lib/codemirror.css">
