--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -123,9 +123,7 @@ padding: 2px 4px 2px 7px;
 %}    
 % }
 
-% if( @details ) {
-%    my $did = int rand 999999;
-                    <tr>
+% if( @between ) {
                     <tr>
                         <td colspan=2 >
 % foreach my $field ( @between ) {
@@ -137,6 +135,11 @@ padding: 2px 4px 2px 7px;
                             
                         </td>
                     </tr>
+% } 
+
+% if( @details ) {
+%    my $did = int rand 999999;
+                    <tr>
                         <td colspan=2 id="<% $did %>" style="white-space: nowrap; display: none">
 % foreach my $field ( @details ) {
 % if ($field->{html}){
