system message notification on top

--- a/root/site/header.html
+++ b/root/site/header.html
@@ -207,6 +207,10 @@
 
 </head>
 <body>
+<div id="boot">
+<div id="main-alert" style="top:0; left: 100px; width:80%; position: absolute; z-index: 999999">
+</div>
+</div>
 <iframe id="FD" NAME="FrameDownload" HEIGHT="0px" WIDTH="0%" BORDER="0"></iframe>
 <div id='run-panel'></div>
 <div id='main-div'></div>
