--- a/root/site/header.html
+++ b/root/site/header.html
@@ -66,6 +66,9 @@
     <!-- objectDiff -->
     <script src="/static/objectDiff/objectDiff.js"></script>
 
+    <!-- js-yaml -->
+    <script src="/static/js-yaml/js-yaml.js"></script>
+
     <!-- CodeMirror -->
     <link rel="stylesheet" href="/static/codemirror/lib/codemirror.css">
     <link rel="stylesheet" href="/static/codemirror/theme/elegant.css">
