--- a/root/dashlets/status_changes.html
+++ b/root/dashlets/status_changes.html
@@ -16,11 +16,11 @@ html: /dashlets/status_changes.html
 
     <div style="clear:left;">
         <h2><% _loc($title) %></h2>
-        <table class="table table-bordered table-condensed">
+        <table class="table table-bordered table-condensed dashboard">
             <thead>
                 <tr>
                     <th><% _loc('Name') %></th>
-                    <th><% _loc('Time') %></th>
+                    <th><% _loc('When') %></th>
                     <th colspan=3><% _loc('Transition') %></th>                    
                 </tr>
             </thead>        
